@@ -78,3 +78,5 @@
 == 0.x.x (xx.xx.xxxx):
 - Changed some display colors to be a bit brighter
 - Force terminal background color to be black
+- Added "OO/MM" mute labels like alsamixer does
+- Made "default" notification boxes more explicit
